<resources>
    <string name="app_name">TourGuideMegaphone</string>
    <string name="txtHintLogInEmail">Log-in e-mail address</string>
    <string name="txtHintPassword">Your password</string>
    <string name="txtBtnSignIn">Sign in</string>
    <string name="txtSignUpInstead">Don\'t have an account? Sign up instead.</string>
    <string name="txtHintLastName">Your last name</string>
    <string name="txtHintFirstName">Your first name</string>
    <string name="txtHintYourEmail">Your email address</string>
    <string name="btnTxtSignUp">Sign Up</string>
    <string name="btnConvert">Convert</string>
    <string name="hintAutoTypeCurrencyFrom">Type in a 3 letter currency code...</string>
    <string name="txtViewCurrencyFrom">Currency from:</string>
    <string name="txtViewCurrencyTo">Currency To:</string>
    <string name="hintTxtViewConvertedAmount">Converted amount</string>
</resources>